--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "flux-db"
 version = "0.1.0"
+authors = ["Paarth <jain.paarth2608@gmail.com>"]
 edition = "2021"
 
 [dependencies]
+rand = "0.8.5"
